; ModuleID = '/home/carl/AnghaBench/redis/src/extr_ziplist.c_zipPrevLenByteDiff.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_ziplist.c_zipPrevLenByteDiff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zipPrevLenByteDiff(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @ZIP_DECODE_PREVLENSIZE(i8* %6, i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @zipStorePrevEntryLength(i32* null, i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = sub i32 %10, %11
  ret i32 %12
}

declare dso_local i32 @ZIP_DECODE_PREVLENSIZE(i8*, i32) #1

declare dso_local i32 @zipStorePrevEntryLength(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
